@@ -1,3 +1,11 @@
+2008-02-14  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/msiformat.cpp: Add new support for MSI/Accelrys
+	Cerius II files. Still needs a bit of debugging, but works fine on
+	single-molecule files.
+
+	* src/formats/Makefile.*: Update for new format.
+
 2008-02-13 Chris Morley
 	
 	* data/plugindefines.txt: comment out problematic entry
@@ -6,7 +14,6 @@
 	update this installer for the multiple DLL build
 	
 	Update other Windows build files.
-
 
 2008-02-13  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
